# base116

./: Cargo.toml  README.md  build.rs
misc/: crate-readme.md
src/: decode.rs  digit.rs  encode.rs  iter.rs  lib.rs  ranges.rs  unwrap.rs  wrap.rs
